Open source in a new tab

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
           this.pane.addButton({
             title: 'ViewSource',
-          }).on('click', () => { window.location = 'https://github.com/toji/webgpu-bundle-culling' });
+          }).on('click', () => { window.open('https://github.com/toji/webgpu-bundle-culling'); });
         }
 
         createMaterialBindGroup(r, g, b) {
